wip: implement swagger api documentation
